[package]
name = "rhino-pbf-rs"
version = "0.1.0"
authors = ["Lando <lando.schumpich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pbf_reader"
crate-type = ["dylib"]

[dependencies]
osmpbfreader = "0.13.4"
libc = "0.2"